fix(style): fix spacing on cards

--- a/client/css/index.css
+++ b/client/css/index.css
@@ -251,4 +251,9 @@ body main {
 .CountriesSectionListItem__image {
     margin-bottom: 1em;
     max-width: 200px;
+    border-radius: inherit;
+}
+
+.CountriesSectionListItem__content {
+    margin-top: .5em;
 }
